feat: [CDS-58438]: Refactoring to add env variable to kubeconfig exec format.